@@ -1,3 +1,11 @@
+2004-12-14  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b311
+
+	* Fix: Remove GALLERY_URL define from Mambo's section of index.php
+	  This caused a bad path when displaying the 'unconfigured' error, 
+	  and wasn't used anywhere else.
+
+	* Change: Text changes for the service providers list, sort the list
+
 2004-12-14  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b310
 
 	* Change: if $type is not set when stats.php is called, 
